[package]
name = "cranelift-mem2reg"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.62"
cranelift-module = "0.62"
cranelift-simplejit = "0.62"
hashlink = "0.5"
